# Jazyk-Rust

./: .gitignore
cvicenie11/advent_of_code12/src/: main.rs
cvicenie11/advent_of_code2/: Cargo.toml
cvicenie5/clapityclap/src/: main.rs
cvicenie5/task_library/src/control/: mod.rs
cvicenie6/JR/task_workspace/ratatask/: Cargo.toml  LICENSE  README.md
cvicenie6/JR/task_workspace/ratatask/src/: app.rs  event.rs  ui.rs
cvicenie7/task_workspace/: .env  Cargo.toml  tasky.json  tasky_argument.json
cvicenie7/task_workspace/clapity_clap/src/: app_config.rs  console_reader.rs  main.rs
cvicenie7/task_workspace/ratatask/: Cargo.toml
cvicenie7/task_workspace/ratatask/src/: app.rs  task_list.rs  ui.rs
cvicenie7/task_workspace/task_library/: .env  TaskManagementDatabase.db
cvicenie7/task_workspace/task_library/src/: db.rs  lib.rs  models.rs
cvicenie7/task_workspace/task_web/: Cargo.toml
cvicenie7/task_workspace/task_web/src/: main.rs
cvicenie7/task_workspace/task_web/static/: index.html
cvicenie7/task_workspace/yew_frontend/: Cargo.toml  index.html
cvicenie7/task_workspace/yew_frontend/src/: lib.rs
cvicenie7/task_workspace/yew_frontend/static/: style.css
hello/src/: main.rs
skuska/finance-cli/: Cargo.toml  history.json  zadanie.txt
skuska/finance-cli/src/: main.rs
skuska/kniznica/: Cargo.toml  kniznica.json  zadanie.txt
skuska/kniznica/src/: lib.rs  main.rs
skuska/library_manager/: Cargo.toml  zadanie.txt
skuska/library_manager/src/: main.rs
skuska/warehouse_manager/: Cargo.toml  zadanie.txt
skuska/warehouse_manager/src/: main.rs
(+5 files in other folders)
